Fix Z-index after rebase

--- a/frontend/src/components/NewTask/NewTask.css
+++ b/frontend/src/components/NewTask/NewTask.css
@@ -38,6 +38,7 @@
   left:50%;
   height:initial;
   transform:translateX(-50%);
+  z-index:5;
   
   max-height:44px;
 }
@@ -67,7 +68,7 @@
   position:fixed;
   background:black;
   opacity:0.4;
-  z-index:0;
+  z-index:4;
   top:0;left:0;
   width:100vw;
   height:100vh;
